--- a/train/package.json
+++ b/train/package.json
@@ -15,7 +15,9 @@
     "framer-motion": "^10.16.5",
     "next": "13.5.4",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-spring": "^9.7.3",
+    "react-toastify": "^9.1.3"
   },
   "devDependencies": {
     "@tanstack/eslint-plugin-query": "^5.8.4",
